<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".AdminDashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/adm.container.visitorsToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/adm.lbl.todaysVisitor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/lbl_today_s_visitors"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/adm.val.totalVisitor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="46"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="36sp" />

                            <TextView
                                android:id="@+id/adm.lbl.totalVisitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_total_visitors"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_horizontal|top"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/adm.val.insideVisitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_circle_shadow"
                                android:clickable="true"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:gravity="center"
                                android:text="22"
                                android:textColor="@color/colorAccent"
                                android:textSize="36sp"
                                android:visibility="visible" />

                            <TextView
                                android:id="@+id/adm.lbl.insideVisitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_inside_campus"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/adm.val.remainVisitor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="24"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="36sp" />

                            <TextView
                                android:id="@+id/adm.lbl.remainVisitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_yet_to_come"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/adm.btn.barcode"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/lbl_scan_qr_code"
                        app:srcCompat="@drawable/ic_qr_code" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/search_text"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp">

                        <EditText
                            android:id="@+id/adm_input_visitorId"
                            android:layout_width="200dp"
                            android:layout_height="32dp"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:hint="@string/lbl_visitor_id"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            tools:targetApi="o" />

                        <ImageButton
                            android:id="@+id/adm_btn_visitorId"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:contentDescription="@string/lbl_search"
                            app:srcCompat="@drawable/search_btn" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/adm.container.visitorsLastDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/adm.lbl.visitorLastDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/lbl_visitors_in_last_days"
                        android:textSize="18sp" />

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graph"
                        android:layout_width="match_parent"
                        android:layout_height="200dip" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/adm.btn.logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_button"
                android:elevation="5dp"
                android:text="@string/lbl_logout"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
