<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".SecurityStaffDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true"
                    android:background="@drawable/search_text"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp">

                    <EditText
                        android:id="@+id/stf_input_visitorId"
                        android:layout_width="160dp"
                        android:layout_height="32dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/lbl_visitor_id"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        tools:targetApi="o" />

                    <ImageButton
                        android:id="@+id/stf_btn_visitorId"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/lbl_search"
                        app:srcCompat="@drawable/search_btn" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/stf.btn.barcode"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="20dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/lbl_scan_qr_code"
                        app:srcCompat="@drawable/ic_qr_code" />

                    <ImageView
                        android:id="@+id/stf.btn.searchByPhoto"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/lbl_search_by_photo"
                        android:tint="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_camera" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/stf.container.msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stf.lbl.msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/stf.prof.container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/stf.visitorImg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/lightBackground"
                        android:contentDescription="Visitor"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/stf.visitorName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Ravi Kant Pandey"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/stf.visitorType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Client"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="0dp"
                            android:text="Access To"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/stf.access"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView\nTextView2" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/stf.btn.logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_button"
            android:elevation="5dp"
            android:text="@string/lbl_logout"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/stf.loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkTransparentBg"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>