<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".VerifyPhoto">

    <ScrollView
        android:id="@+id/vp.container.main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/vp.uploadedImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/vp.lbl.uploadedImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_horizontal"
                        android:text="System Photograph"
                        android:textSize="18sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/vp.newImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/err_no_photo"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/vp.lbl.newImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_horizontal"
                        android:text="Current Photograph"
                        android:textSize="18sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/vp.lbl.match"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/lbl_photo_match_by_system"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/vp.val.match"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/vp.btn.reject"
                            android:layout_width="120dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_corner_button_red"
                            android:text="@string/lbl_reject"
                            android:textColor="@android:color/white" />

                        <Button
                            android:id="@+id/vp.btn.approve"
                            android:layout_width="120dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_corner_button_green"
                            android:text="@string/lbl_approve"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/vp.loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkTransparentBg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>